Changes made from the "0.7.1" release to the "0.7.2" release:
-----------------------------------------------------------

* Bertrand Coconnier:

- Fixed bug #2012579 (Mac OSX Leopard compiling bug) - Thanks to Michael Strobel
  and Tim Baumgartner for the bug report and the patch.
- Negative values passed to glcResolution() now raise GLC_PARAMETER_ERROR
- Fixed bug #1980982 (Checks for MinGW in the configure script are incomplete)
- Feature request #1947346 : added files for pkg-config (thanks to Giel
  van Shijndel and Dennis Schridde for providing them)
- Fixed bug #1947464 (Warnings are generated when compiling with gcc option
  -Wstrict-prototypes)
- Fixed bug #1935557 (Fonts are not rendered correctly when the resolution is
  changed using glcResolution).

Changes made from the "0.7.0" release to the "0.7.1" release:
-----------------------------------------------------------

* Bertrand Coconnier:

- Fixed the bugs #1852883 and #1890660 (VBOs had an erratic behaviour on some
  Mac OS X platforms and Intel X3100 gfx cards under Linux).
- Removed the workaround for bug #1852883

Changes made from the "0.6.5" release to the "0.7.0" release:
-----------------------------------------------------------

* Bertrand Coconnier:

- Added a workaround for bug #1852883 : VBOs are disabled on Mac OSX platforms
- Fixed a bug in the measurement routines which caused the advance vector of
  strings to be wrongly computed.
- Simplified a bit the GL state management (enabling of GL_TEXTURE_2D should now
  be done by the user when the rendering style is GLC_TEXTURE)
- Updated GLEW source code to release 1.5.0
- glcGetFontMap() and glcGetMasterMap() now return GLC_NONE if the font/master
  does not map 'inCode'.
- Updated test7 in order not to report an error when testing fonts which defines
  a space character with no width.
- glcGenFontID() now creates an empty font in order to reserve the ID for a
  future use. The new ID can be freed by deleting it with glcDeleteFont().